--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>6BM Band Official Website</title>
         <link rel="stylesheet" type="text/css" href="./style.css" />
     </head>
-    <body class="body">
+    <body>
         <header class="page-header">
             <h1 class="page-brand">
                 <img src="./images/logo.png" alt="6BM logo" />
