--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <title>6BM Band Official Website</title>
         <link rel="stylesheet" type="text/css" href="./style.css" />
+		<script
+      src="https://use.fontawesome.com/releases/v5.11.2/js/all.js"
+      data-auto-a11y="true"
+    ></script>
     </head>
     <body>
         <header class="page-header">
@@ -12,22 +16,22 @@
             <nav class="page-navigation">
                 <ul class="page-navigation__items">
                     <li class="page-navigation__item">
-                        <a href="#home">Home</a>
+                        <a id="menu" href="#home">Home</a>
                     </li>
                     <li class="page-navigation__item">
-                        <a href="#about">About</a>
+                        <a id="menu" href="#about">About</a>
                     </li>
                     <li class="page-navigation__item">
-                        <a href="#concerts">Concerts</a>
+                        <a id="menu" href="#concerts">Concerts</a>
                     </li>
                     <li class="page-navigation__item">
-                        <a href="#video">Video</a>
+                        <a id="menu" href="#video">Video</a>
                     </li>
                     <li class="page-navigation__item">
-                        <a href="#photos">Photos</a>
+                        <a id="menu" href="#photos">Photos</a>
                     </li>
                     <li class="page-navigation__item">
-                        <a href="#contact">Contact</a>
+                        <a id="menu" href="#contact">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -195,16 +199,17 @@
             <h2 class="screen-reader-only">Social media links</h2>
             <ul class="social-links">
                 <li class="social-links__item">
-                    <a class="social-links__link" href="http://facebook.com/">Facebook</a>
+                    
+				<a class="social-links__link" href="http://facebook.com/"><i class="fab fa-facebook-square"></i></a>
                 </li>
                 <li class="social-links__item">
-                    <a class="social-links__link" href="http://instagram.com/">Instagram</a>
+                    <a class="social-links__link" href="http://instagram.com/"><i class="fab fa-instagram"></i></a>
                 </li>
                 <li class="social-links__item">
-                    <a class="social-links__link" href="http://last.fm/">Last.fm</a>
+                    <a class="social-links__link" href="http://last.fm/"><i class="fab fa-lastfm"></i></a>
                 </li>
                 <li class="social-links__item">
-                    <a class="social-links__link" href="http://youtube.com/">Youtube</a>
+                    <a class="social-links__link" href="http://youtube.com/"><i class="fab fa-youtube"></i></a>
                 </li>
             </ul>
         </footer>
